@@ -12,6 +12,7 @@ import org.elasticsearch.client.ResponseException;
 import org.elasticsearch.test.rest.ESRestTestCase;
 import org.elasticsearch.xpack.esql.AssertWarnings;
 import org.elasticsearch.xpack.esql.CsvTestsDataLoader;
+import org.elasticsearch.xpack.esql.approximation.ApproximationPlan;
 import org.elasticsearch.xpack.esql.generator.Column;
 import org.elasticsearch.xpack.esql.generator.EsqlQueryGenerator;
 import org.elasticsearch.xpack.esql.generator.LookupIdx;
@@ -19,6 +20,18 @@ import org.elasticsearch.xpack.esql.generator.LookupIdxColumn;
 import org.elasticsearch.xpack.esql.generator.QueryExecuted;
 import org.elasticsearch.xpack.esql.generator.QueryExecutor;
 import org.elasticsearch.xpack.esql.generator.command.CommandGenerator;
+import org.elasticsearch.xpack.esql.generator.command.pipe.DissectGenerator;
+import org.elasticsearch.xpack.esql.generator.command.pipe.EnrichGenerator;
+import org.elasticsearch.xpack.esql.generator.command.pipe.EvalGenerator;
+import org.elasticsearch.xpack.esql.generator.command.pipe.GrokGenerator;
+import org.elasticsearch.xpack.esql.generator.command.pipe.InlineStatsGenerator;
+import org.elasticsearch.xpack.esql.generator.command.pipe.LookupJoinGenerator;
+import org.elasticsearch.xpack.esql.generator.command.pipe.MvExpandGenerator;
+import org.elasticsearch.xpack.esql.generator.command.pipe.RegisteredDomainGenerator;
+import org.elasticsearch.xpack.esql.generator.command.pipe.RenameGenerator;
+import org.elasticsearch.xpack.esql.generator.command.pipe.StatsGenerator;
+import org.elasticsearch.xpack.esql.generator.command.pipe.UriPartsGenerator;
+import org.elasticsearch.xpack.esql.generator.command.source.FromGenerator;
 import org.elasticsearch.xpack.esql.qa.rest.ProfileLogger;
 import org.elasticsearch.xpack.esql.qa.rest.RestEsqlTestCase;
 import org.junit.AfterClass;
@@ -27,19 +40,27 @@ import org.junit.Rule;
 
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Collection;
+import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
+import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
-import static org.elasticsearch.xpack.esql.CsvTestsDataLoader.CSV_DATASET_MAP;
+import static org.elasticsearch.xpack.esql.CsvTestsDataLoader.CSV_DATASET;
 import static org.elasticsearch.xpack.esql.CsvTestsDataLoader.ENRICH_POLICIES;
 import static org.elasticsearch.xpack.esql.CsvTestsDataLoader.availableDatasetsForEs;
 import static org.elasticsearch.xpack.esql.CsvTestsDataLoader.loadDataSetIntoEs;
 import static org.elasticsearch.xpack.esql.generator.EsqlQueryGenerator.COLUMN_NAME;
 import static org.elasticsearch.xpack.esql.generator.EsqlQueryGenerator.COLUMN_ORIGINAL_TYPES;
 import static org.elasticsearch.xpack.esql.generator.EsqlQueryGenerator.COLUMN_TYPE;
+import static org.elasticsearch.xpack.esql.generator.EsqlQueryGenerator.unquote;
+import static org.elasticsearch.xpack.esql.generator.command.pipe.KeepGenerator.UNMAPPED_FIELD_NAMES;
+import static org.elasticsearch.xpack.esql.generator.command.source.FromGenerator.SET_UNMAPPED_FIELDS_PREFIX;
 
 public abstract class GenerativeRestTest extends ESRestTestCase implements QueryExecutor {
 
@@ -56,9 +77,27 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
         "argument of \\[count.*\\] must",
         "Cannot use field \\[.*\\] with unsupported type \\[.*\\]",
         "Unbounded SORT not supported yet",
+        "MV_EXPAND .* cannot yet have an unbounded SORT .* before it",
         "The field names are too complex to process", // field_caps problem
         "must be \\[any type except counter types\\]", // TODO refine the generation of count()
         "INLINE STATS cannot be used after an explicit or implicit LIMIT command",
+        "sub-plan execution results too large",  // INLINE STATS limitations
+        // this comes from mapping-all-types.json and it gets occasionally picked up by full text functions
+        "Inference endpoint not found \\[foo_inference_id\\]",
+        // full-text functions are not allowed to match on fields that come from lookup indices
+        "cannot operate on \\[.*\\], supplied by an index \\[.*\\] in non-STANDARD mode \\[lookup\\]",
+        "Can only use fuzzy queries on keyword and text fields - not on \\[.*\\] which is of type \\[.*\\]",
+        // full-text function receiving a non-boolean value for a boolean type field
+        "Can't parse boolean value \\[.*\\], expected \\[true\\] or \\[false\\]",
+        // full-text function trying to parse text as date field and failing
+        "failed to parse date field \\[.*\\] with format",
+        // full-text function trying to parse a non-IP string
+        "is not an IP string literal",
+        // a values(<that field>) agg could more than 100,000 values into a single multi-valued field, and a subsequent
+        // inline stats … by <that field> hits the hard limit Block.MAX_LOOKUP = 100_000 in the compute layer
+        // throwing IllegalArgumentException via PackedValuesBlockHash
+        // see https://github.com/elastic/elasticsearch/issues/145694
+        "Found a single entry with .* entries",
 
         // Awaiting fixes for query failure
         "Unknown column \\[<all-fields-projected>\\]", // https://github.com/elastic/elasticsearch/issues/121741,
@@ -66,22 +105,42 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
         "Plan \\[ProjectExec\\[\\[<no-fields>.* optimized incorrectly due to missing references",
         "The incoming YAML document exceeds the limit:", // still to investigate, but it seems to be specific to the test framework
         "Data too large", // Circuit breaker exceptions eg. https://github.com/elastic/elasticsearch/issues/130072
-        "long overflow", // https://github.com/elastic/elasticsearch/issues/135759
-        "cannot be cast to class", // https://github.com/elastic/elasticsearch/issues/133992
-        "can't find input for", // https://github.com/elastic/elasticsearch/issues/136596
-        "unexpected byte", // https://github.com/elastic/elasticsearch/issues/136598
-        "out of bounds for length", // https://github.com/elastic/elasticsearch/issues/136851
+        "long overflow", // https://github.com/elastic/elasticsearch/issues/99575
+        "optimized incorrectly due to missing references", // https://github.com/elastic/elasticsearch/issues/138231
+        // https://github.com/elastic/elasticsearch/issues/142537 for null arguments in clamp() function
+        "'field' must not be null in clamp\\(\\)", // clamp/clamp_min/clamp_max reject NULL field from unmapped fields
+        "must be \\[boolean, date, ip, string or numeric except unsigned_long or counter types\\]", // type mismatch in top() arguments
+        "Does not support yet aggregations over constants", // https://github.com/elastic/elasticsearch/issues/118292
+        "Field \\[.*\\] of type \\[.*\\] does not support match.* queries",
+        // https://github.com/elastic/elasticsearch/issues/145570
+        "function cannot operate on \\[.*\\], which is not a field from an index mapping",
+        "\\[:\\] operator cannot operate on \\[.*\\], which is not a field from an index mapping",
+        "JOIN left field \\[.*\\] of type \\[NULL\\] is incompatible with right", // https://github.com/elastic/elasticsearch/issues/141827
+        // https://github.com/elastic/elasticsearch/issues/141827
+        "JOIN left field \\[.*\\] of type \\[.*\\] is incompatible with right field \\[.*\\] of type \\[NULL\\]",
 
         // Awaiting fixes for correctness
         "Expecting at most \\[.*\\] columns, got \\[.*\\]", // https://github.com/elastic/elasticsearch/issues/129561
 
-        // TS-command tests
+        // TS-command tests (acceptable errors)
         "time-series.*the first aggregation.*is not allowed",
         "count_star .* can't be used with TS command",
         "time_series aggregate.* can only be used with the TS command",
-        "implicit time-series aggregation function .* doesn't support type .*",
+        "implicit time-series aggregation function",
         "INLINE STATS .* can only be used after STATS when used with TS command",
-        "cannot group by a metric field .* in a time-series aggregation"
+        "cannot group by a metric field .* in a time-series aggregation",
+        "@timestamp field of type date or date_nanos",
+        "which was either not present in the source index, or has been dropped or renamed",
+        "second argument of .* must be \\[date_nanos or datetime\\], found value \\[@timestamp\\] type \\[.*\\]",
+        "expected named expression for grouping; got ",
+        "Time-series aggregations require direct use of @timestamp which was not found. If @timestamp was renamed in EVAL, "
+            + "use the original @timestamp field instead.", // https://github.com/elastic/elasticsearch/pull/141196
+
+        // _doc field unexpectedly appearing in output after FORK
+        "Output has changed from \\[.*\\] to \\[.*_doc.*\\]", // https://github.com/elastic/elasticsearch/issues/146856
+
+        // TopNOperator type mismatch in ValueExtractor
+        "Expected \\[.*\\] but was \\[.*\\].*ValueExtractor" // https://github.com/elastic/elasticsearch/issues/146850
     );
 
     public static final Set<Pattern> ALLOWED_ERROR_PATTERNS = ALLOWED_ERRORS.stream()
@@ -89,9 +148,43 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
         .map(x -> Pattern.compile(x, Pattern.DOTALL))
         .collect(Collectors.toSet());
 
+    /**
+     * Matches "Unknown column [X]" errors, optionally followed by ", did you mean [Y]?".
+     * This error is expected when an unmapped field is used after a schema-fixing command (KEEP, DROP, STATS)
+     * that included a different unmapped field but not this one, making the second one legitimately unknown.
+     * We only allow this error when the unknown column is an unmapped field name, and if a suggestion is present,
+     * the suggested column must also be an unmapped field name.
+     */
+    private static final Pattern UNKNOWN_COLUMN_WITH_SUGGESTION_PATTERN = Pattern.compile(
+        ".*Unknown column \\[([^]]+)], did you mean \\[([^]]+)]\\?.*",
+        Pattern.DOTALL
+    );
+    private static final Pattern UNKNOWN_COLUMN_PATTERN = Pattern.compile(".*Unknown column \\[([^]]+)].*", Pattern.DOTALL);
+
+    /**
+     * Matches "... argument of [X] must be [Y], found value [Z] type [T]" errors.
+     * This happens when an unmapped field ends up with a different data type that doesn't match the one of the function's argument(s).
+     * The unmapped field name may appear either in the function expression(group 1) or in the found-value position (group 2).
+     */
+    private static final Pattern ANY_TYPE_MISMATCH_PATTERN = Pattern.compile(
+        ".*argument of \\[([^]]+)] must be \\[.*], found value \\[([^]]+)] type \\[.*].*",
+        Pattern.DOTALL
+    );
+    /**
+     * Matches type mismatch errors where a function argument has one of the special types that most scalar functions reject.
+     * For example: "must be [any type except counter types, dense_vector, ...], found value [...] type [counter_long]"
+     */
+    private static final Pattern SCALAR_TYPE_MISMATCH_PATTERN = Pattern.compile(
+        ".*found value \\[[^]]+] type \\[(counter_long|counter_double|counter_integer"
+            + "|aggregate_metric_double|dense_vector|tdigest|histogram|exponential_histogram|date_range)].*",
+        Pattern.DOTALL
+    );
+
+    private static final Set<String> UNMAPPED_NAMES = Set.of(UNMAPPED_FIELD_NAMES);
+
     @Before
     public void setup() throws IOException {
-        if (indexExists(CSV_DATASET_MAP.keySet().iterator().next()) == false) {
+        if (indexExists(CSV_DATASET.keySet().iterator().next()) == false) {
             loadDataSetIntoEs(client(), true, supportsSourceFieldMapping(), false);
         }
     }
@@ -117,32 +210,38 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
     public void test() throws IOException {
         List<String> indices = availableIndices();
         List<LookupIdx> lookupIndices = lookupIndices();
-        List<CsvTestsDataLoader.EnrichConfig> policies = availableEnrichPolicies();
+        Collection<CsvTestsDataLoader.EnrichConfig> policies = ENRICH_POLICIES.values();
         CommandGenerator.QuerySchema mappingInfo = new CommandGenerator.QuerySchema(indices, lookupIndices, policies);
 
         for (int i = 0; i < ITERATIONS; i++) {
             var exec = new EsqlQueryGenerator.Executor() {
                 @Override
                 public void run(CommandGenerator generator, CommandGenerator.CommandDescription current) {
-                    previousCommands.add(current);
                     final String command = current.commandString();
 
-                    final QueryExecuted result = previousResult == null
+                    QueryExecuted result = previousResult == null
                         ? execute(command, 0)
                         : execute(previousResult.query() + command, previousResult.depth());
-                    previousResult = result;
 
                     final boolean hasException = result.exception() != null;
-                    if (hasException || checkResults(List.of(), generator, current, previousResult, result).success() == false) {
+                    if (hasException
+                        || checkPipelineResults(previousCommands, generator, current, previousResult, result, currentSchema)
+                            .success() == false) {
                         if (hasException) {
-                            checkException(result);
+                            List<CommandGenerator.CommandDescription> commands = new ArrayList<>(previousCommands.size() + 1);
+                            commands.addAll(previousCommands);
+                            commands.add(current);
+                            checkPipelineException(result, commands, currentSchema);
                         }
                         continueExecuting = false;
                         currentSchema = List.of();
                     } else {
                         continueExecuting = true;
-                        currentSchema = result.outputSchema();
+                        currentSchema = updateIndexMapped(result.outputSchema(), currentSchema, current);
                     }
+
+                    previousCommands.add(current);
+                    previousResult = result;
                 }
 
                 @Override
@@ -160,25 +259,130 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
                     return currentSchema;
                 }
 
+                @Override
+                public void clearCommandHistory() {
+                    previousCommands = new ArrayList<>();
+                    previousResult = null;
+                }
+
                 boolean continueExecuting;
                 List<Column> currentSchema;
-                final List<CommandGenerator.CommandDescription> previousCommands = new ArrayList<>();
+                List<CommandGenerator.CommandDescription> previousCommands = new ArrayList<>();
                 QueryExecuted previousResult;
             };
-            EsqlQueryGenerator.generatePipeline(MAX_DEPTH, sourceCommand(), mappingInfo, exec, requiresTimeSeries(), this);
+            try {
+                EsqlQueryGenerator.generatePipeline(MAX_DEPTH, sourceCommand(), mappingInfo, exec, requiresTimeSeries(), this);
+            } catch (Exception e) {
+                // query failures are AssertionErrors, if we get here it's an unexpected exception in the query generation
+                if (isAllowedError(e.getMessage()) == false) {
+                    StringBuilder message = new StringBuilder();
+                    message.append("Generative tests, error generating new command \n");
+                    message.append("Previous query: \n");
+                    message.append(exec.previousResult.query());
+                    fail(e, message.toString());
+                }
+            }
         }
+    }
+
+    /**
+     * Strips {@code _approximation_} metadata columns from a {@link QueryExecuted}.
+     */
+    private static QueryExecuted stripApproximationColumns(QueryExecuted qe) {
+        if (qe == null || qe.outputSchema() == null) {
+            return qe;
+        }
+        List<Integer> keepIndices = new ArrayList<>();
+        for (int i = 0; i < qe.outputSchema().size(); i++) {
+            if (qe.outputSchema().get(i).name().startsWith(ApproximationPlan.CONFIDENCE_INTERVAL_COLUMN_PREFIX) == false
+                && qe.outputSchema().get(i).name().startsWith(ApproximationPlan.CERTIFIED_COLUMN_PREFIX) == false) {
+                keepIndices.add(i);
+            }
+        }
+        if (keepIndices.size() == qe.outputSchema().size()) {
+            return qe;
+        }
+        List<Column> schema = keepIndices.stream().map(qe.outputSchema()::get).toList();
+        List<List<Object>> rows = qe.result() == null
+            ? null
+            : qe.result().stream().map(row -> keepIndices.stream().map(row::get).toList()).toList();
+        return new QueryExecuted(qe.query(), qe.depth(), schema, rows, qe.exception());
     }
 
     protected CommandGenerator sourceCommand() {
         return EsqlQueryGenerator.sourceCommand();
     }
 
-    private static CommandGenerator.ValidationResult checkResults(
+    protected CommandGenerator.ValidationResult checkPipelineResults(
         List<CommandGenerator.CommandDescription> previousCommands,
         CommandGenerator commandGenerator,
         CommandGenerator.CommandDescription commandDescription,
         QueryExecuted previousResult,
-        QueryExecuted result
+        QueryExecuted result,
+        List<Column> currentSchema
+    ) {
+        return checkResults(previousCommands, commandGenerator, commandDescription, previousResult, result, currentSchema);
+    }
+
+    protected void checkPipelineException(
+        QueryExecuted query,
+        List<CommandGenerator.CommandDescription> previousCommands,
+        List<Column> currentSchema
+    ) {
+        checkException(query, previousCommands, currentSchema);
+    }
+
+    private record FailureContext(
+        String errorMessage,
+        String normalizedErrorMessage,
+        String query,
+        List<CommandGenerator.CommandDescription> previousCommands,
+        List<Column> currentSchema
+    ) {
+        FailureContext(
+            String errorMessage,
+            String query,
+            List<CommandGenerator.CommandDescription> previousCommands,
+            List<Column> currentSchema
+        ) {
+            this(
+                errorMessage,
+                errorMessage == null ? null : normalizeErrorMessage(errorMessage),
+                query,
+                previousCommands == null ? List.of() : previousCommands,
+                currentSchema == null ? List.of() : currentSchema
+            );
+        }
+    }
+
+    private static final AllowedFailureRule[] ALLOWED_FAILURE_RULES = {
+        ctx -> matchesAllowedErrorPatterns(ctx.normalizedErrorMessage),
+        ctx -> isUnmappedFieldError(ctx.normalizedErrorMessage, ctx.query),
+        ctx -> isScalarTypeMismatchError(ctx.normalizedErrorMessage),
+        ctx -> isFieldFullTextError(ctx.normalizedErrorMessage, ctx.query, ctx.previousCommands, ctx.currentSchema),
+        ctx -> isFullTextAfterWhereBugs(ctx.normalizedErrorMessage),
+        ctx -> isLenientFalseFailedToCreateFullTextQueryError(ctx.normalizedErrorMessage, ctx.query),
+        ctx -> isTsOutputChangedError(ctx.normalizedErrorMessage, ctx.query), };
+
+    private static boolean isAllowedFailure(FailureContext ctx) {
+        if (ctx == null || ctx.errorMessage == null) {
+            return false;
+        }
+        for (AllowedFailureRule rule : ALLOWED_FAILURE_RULES) {
+            if (rule.matches(ctx)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    protected static CommandGenerator.ValidationResult checkResults(
+        List<CommandGenerator.CommandDescription> previousCommands,
+        CommandGenerator commandGenerator,
+        CommandGenerator.CommandDescription commandDescription,
+        QueryExecuted previousResult,
+        QueryExecuted result,
+        List<Column> currentSchema
     ) {
         CommandGenerator.ValidationResult outputValidation = commandGenerator.validateOutput(
             previousCommands,
@@ -188,22 +392,31 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
             result.outputSchema(),
             result.result()
         );
-        if (outputValidation.success() == false) {
-            for (Pattern allowedError : ALLOWED_ERROR_PATTERNS) {
-                if (isAllowedError(outputValidation.errorMessage(), allowedError)) {
-                    return outputValidation;
-                }
-            }
-            fail("query: " + result.query() + "\nerror: " + outputValidation.errorMessage());
-        }
+        failOnUnexpectedValidationError(outputValidation, result, previousCommands, currentSchema);
         return outputValidation;
     }
 
-    private void checkException(QueryExecuted query) {
-        for (Pattern allowedError : ALLOWED_ERROR_PATTERNS) {
-            if (isAllowedError(query.exception().getMessage(), allowedError)) {
+    protected static void failOnUnexpectedValidationError(
+        CommandGenerator.ValidationResult outputValidation,
+        QueryExecuted result,
+        List<CommandGenerator.CommandDescription> previousCommands,
+        List<Column> currentSchema
+    ) {
+        if (outputValidation.success() == false) {
+            if (isAllowedFailure(new FailureContext(outputValidation.errorMessage(), result.query(), previousCommands, currentSchema))) {
                 return;
             }
+            fail("query: " + result.query() + "\nerror: " + outputValidation.errorMessage());
+        }
+    }
+
+    protected void checkException(
+        QueryExecuted query,
+        List<CommandGenerator.CommandDescription> previousCommands,
+        List<Column> currentSchema
+    ) {
+        if (isAllowedFailure(new FailureContext(query.exception().getMessage(), query.query(), previousCommands, currentSchema))) {
+            return;
         }
         fail("query: " + query.query() + "\nexception: " + query.exception().getMessage());
     }
@@ -212,16 +425,350 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
      * Long lines in exceptions can be split across several lines. When a newline is inserted, the end of the current line and the beginning
      * of the new line are marked with a backslash {@code \}; the new line will also have whitespace before the backslash for aligning.
      */
-    private static final Pattern ERROR_MESSAGE_LINE_BREAK = Pattern.compile("\\\\\n\\s*\\\\");
+    private static final Pattern ERROR_MESSAGE_LINE_BREAK = Pattern.compile("\\\\\r?\n\\s*\\\\");
 
-    private static boolean isAllowedError(String errorMessage, Pattern allowedPattern) {
-        String errorWithoutLineBreaks = ERROR_MESSAGE_LINE_BREAK.matcher(errorMessage).replaceAll("");
-        return allowedPattern.matcher(errorWithoutLineBreaks).matches();
+    private static String normalizeErrorMessage(String errorMessage) {
+        return ERROR_MESSAGE_LINE_BREAK.matcher(errorMessage).replaceAll("");
+    }
+
+    protected static boolean isAllowedError(String errorMessage) {
+        if (errorMessage == null) {
+            return false;
+        }
+        return matchesAllowedErrorPatterns(normalizeErrorMessage(errorMessage));
+    }
+
+    private static boolean matchesAllowedErrorPatterns(String normalizedErrorMessage) {
+        for (Pattern allowedError : ALLOWED_ERROR_PATTERNS) {
+            if (allowedError.matcher(normalizedErrorMessage).matches()) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    protected static boolean isAllowedError(String errorMessage, Pattern allowedPattern) {
+        return allowedPattern.matcher(normalizeErrorMessage(errorMessage)).matches();
+    }
+
+    /**
+     * Checks if the error is a known unmapped field error. This covers:
+     * <ul>
+     *   <li>"Unknown column [X], did you mean [Y]?" - both X and Y must be unmapped field names</li>
+     *   <li>"Unknown column [X]" (no suggestion) - X must be an unmapped field name</li>
+     *   <li>"first argument of [X] is [null] so second argument must also be [null] but was [Y]" -
+     *       the expression X must contain an unmapped field name (https://github.com/elastic/elasticsearch/issues/142115)</li>
+     *
+     * </ul>
+     */
+    private static boolean isUnmappedFieldError(String errorMessage, String query) {
+        return isUnmappedFieldPrefixError(errorMessage, query, SET_UNMAPPED_FIELDS_PREFIX);
+    }
+
+    protected static boolean isUnmappedFieldPrefixError(String errorMessage, String query, String prefix) {
+        if (query.startsWith(prefix) == false) {
+            return false;
+        }
+        String errorWithoutLineBreaks = normalizeErrorMessage(errorMessage);
+
+        Matcher matcher = UNKNOWN_COLUMN_WITH_SUGGESTION_PATTERN.matcher(errorWithoutLineBreaks);
+        if (matcher.matches()) {
+            String unknownColumn = matcher.group(1);
+            String suggestedColumn = matcher.group(2);
+            return UNMAPPED_NAMES.contains(unknownColumn) && UNMAPPED_NAMES.contains(suggestedColumn);
+        }
+
+        matcher = UNKNOWN_COLUMN_PATTERN.matcher(errorWithoutLineBreaks);
+        if (matcher.matches()) {
+            String unknownColumn = matcher.group(1);
+            return UNMAPPED_NAMES.contains(unknownColumn);
+        }
+
+        matcher = ANY_TYPE_MISMATCH_PATTERN.matcher(errorWithoutLineBreaks);
+        if (matcher.matches()) {
+            String functionExpression = matcher.group(1);
+            String foundValue = matcher.group(2);
+            return UNMAPPED_NAMES.stream().anyMatch(name -> functionExpression.contains(name) || foundValue.contains(name));
+        }
+
+        return false;
+    }
+
+    /**
+     * Checks if the error is a type mismatch where a function received a field of a special type that most scalar
+     * functions don't support (counter types, aggregate_metric_double, dense_vector, tdigest, histogram, etc.).
+     * These errors are acceptable since the generative tests may compose function calls with fields of these types.
+     */
+    private static boolean isScalarTypeMismatchError(String errorMessage) {
+        return SCALAR_TYPE_MISMATCH_PATTERN.matcher(errorMessage).matches();
+    }
+
+    private static final Pattern NOT_A_FIELD_FROM_INDEX_PATTERN = Pattern.compile(
+        ".*cannot operate on \\[([^]]+)\\], which is not a field from an index mapping.*",
+        Pattern.DOTALL
+    );
+
+    /**
+     * Captures fields created by GROK patterns, e.g. {@code %{WORD:foo}} or {@code %{NUMBER:bar:int}}.
+     */
+    private static final Pattern GROK_GENERATED_FIELD_PATTERN = Pattern.compile("%\\{[^:}]+:([^}:]+)(?::[^}]+)?}");
+    /**
+     * Captures fields created by DISSECT patterns, e.g. {@code %{foo}}. Ignores skip fields like {@code %{?}} or {@code %{?skip}}.
+     */
+    private static final Pattern DISSECT_GENERATED_FIELD_PATTERN = Pattern.compile("%\\{([^}]+)}");
+
+    /**
+     * Captures both the source and target of a RENAME clause, e.g. {@code old_field AS new_field}.
+     * Group 1 is the source (possibly back-tick quoted), group 2 is the target.
+     */
+    private static final Pattern RENAME_PAIR_PATTERN = Pattern.compile("\\s*(`[^`]+`|[^,\\s]+)\\s+[Aa][Ss]\\s+(`[^`]+`|[^,\\s]+)\\s*");
+
+    /**
+     * Matches {@code | rename X as Y} segments embedded in a LOOKUP JOIN command string.
+     * {@link LookupJoinGenerator} prepends rename commands to align the left-side key columns
+     * with the lookup index key names; these renames are part of a single {@link CommandGenerator.CommandDescription}
+     * and must be accounted for when propagating {@link Column#indexMapped()} flags.
+     */
+    private static final Pattern EMBEDDED_RENAME_PATTERN = Pattern.compile(
+        "(?i)\\|\\s*rename\\s+(`[^`]+`|[^\\s|]+)\\s+as\\s+(`[^`]+`|[^\\s|]+)"
+    );
+
+    /**
+     * Propagates the {@link Column#indexMapped()} flag through the pipeline after a command executes.
+     * <p>
+     * The REST API does not expose attribute-type information, so this method infers it from:
+     * <ul>
+     *   <li>The previous schema (columns carry their {@code indexMapped} status from earlier commands)</li>
+     *   <li>The command description (command name and context — e.g. EVAL stores {@code NEW_COLUMNS})</li>
+     * </ul>
+     * Columns that are explicitly created by the command are marked {@code indexMapped=false};
+     * columns that survive unchanged from the previous schema inherit their previous status.
+     */
+    static List<Column> updateIndexMapped(
+        List<Column> newSchema,
+        List<Column> previousSchema,
+        CommandGenerator.CommandDescription command
+    ) {
+        if (newSchema == null || newSchema.isEmpty()) {
+            return newSchema;
+        }
+        if (previousSchema == null || previousSchema.isEmpty()) {
+            return newSchema;
+        }
+
+        String commandName = command.commandName();
+        if (commandName == null) {
+            return newSchema;
+        }
+        commandName = commandName.toLowerCase(Locale.ROOT);
+
+        Map<String, Boolean> prevMapped = new HashMap<>();
+        for (Column col : previousSchema) {
+            prevMapped.put(col.name(), col.indexMapped());
+        }
+
+        Set<String> createdColumns = new HashSet<>();
+
+        switch (commandName) {
+            case EvalGenerator.EVAL -> {
+                Object newCols = command.context().get(EvalGenerator.NEW_COLUMNS);
+                if (newCols instanceof List<?> list) {
+                    list.forEach(name -> createdColumns.add((String) name));
+                }
+            }
+            case GrokGenerator.GROK -> {
+                Matcher gm = GROK_GENERATED_FIELD_PATTERN.matcher(command.commandString());
+                while (gm.find()) {
+                    createdColumns.add(unquote(gm.group(1)));
+                }
+            }
+            case DissectGenerator.DISSECT -> {
+                Matcher dm = DISSECT_GENERATED_FIELD_PATTERN.matcher(command.commandString());
+                while (dm.find()) {
+                    String generated = dm.group(1);
+                    if (generated.startsWith("?") == false) {
+                        createdColumns.add(unquote(generated));
+                    }
+                }
+            }
+            case MvExpandGenerator.MV_EXPAND -> {
+                String expanded = command.commandString().replaceFirst("(?i)^\\s*\\|\\s*mv_expand\\s+", "").trim();
+                // Not truly a newly created column, but we need to override the indexMapped flag so that full-text functions don't use it.
+                // https://github.com/elastic/elasticsearch/issues/142713
+                createdColumns.add(unquote(expanded));
+            }
+            case StatsGenerator.STATS, InlineStatsGenerator.INLINE_STATS -> {
+                return newSchema.stream().map(col -> new Column(col.name(), col.type(), col.originalTypes(), false)).toList();
+            }
+            case RenameGenerator.RENAME -> {
+                return handleRenameIndexMapped(newSchema, prevMapped, command.commandString());
+            }
+            case RegisteredDomainGenerator.REGISTERED_DOMAIN -> {
+                String prefix = (String) command.context().get("prefix");
+                if (prefix != null) {
+                    for (String subField : List.of("domain", "registered_domain", "top_level_domain", "subdomain")) {
+                        createdColumns.add(prefix + "." + subField);
+                    }
+                }
+            }
+            case UriPartsGenerator.URI_PARTS -> {
+                String prefix = (String) command.context().get("prefix");
+                if (prefix != null) {
+                    for (Column col : newSchema) {
+                        if (col.name().startsWith(prefix + ".")) {
+                            createdColumns.add(col.name());
+                        }
+                    }
+                }
+            }
+            case EnrichGenerator.ENRICH -> {
+                // Enrich fields can shadow existing index columns, so we use the policy's declared enrich_fields
+                // from the context to ensure they are marked as non-index-mapped even when names collide.
+                Object enrichFieldsObj = command.context().get(EnrichGenerator.ENRICH_FIELDS);
+                if (enrichFieldsObj instanceof List<?> enrichFieldsList) {
+                    enrichFieldsList.forEach(name -> createdColumns.add((String) name));
+                }
+            }
+            case LookupJoinGenerator.LOOKUP_JOIN -> {
+                // LookupJoinGenerator embeds RENAME commands before the actual LOOKUP JOIN to align
+                // left-side key columns with lookup index key names. Process these renames so that
+                // fields renamed from non-index-mapped sources correctly inherit indexMapped=false
+                // instead of picking up the old indexMapped status of a same-named existing field.
+                Matcher rm = EMBEDDED_RENAME_PATTERN.matcher(command.commandString());
+                while (rm.find()) {
+                    String oldName = unquote(rm.group(1).trim());
+                    String newName = unquote(rm.group(2).trim());
+                    boolean wasMapped = prevMapped.getOrDefault(oldName, false);
+                    prevMapped.remove(oldName);
+                    prevMapped.put(newName, wasMapped);
+                }
+            }
+            default -> {
+                // For commands that don't create named columns (KEEP, DROP, SORT, LIMIT, WHERE, etc.),
+                // any column not in previous is from the command (e.g. LOOKUP_JOIN, CHANGE_POINT)
+            }
+        }
+
+        return applyIndexMapped(newSchema, createdColumns, prevMapped);
+    }
+
+    private static List<Column> applyIndexMapped(List<Column> schema, Set<String> createdColumns, Map<String, Boolean> prevMapped) {
+        return schema.stream().map(col -> {
+            if (createdColumns.contains(col.name())) {
+                return new Column(col.name(), col.type(), col.originalTypes(), false);
+            }
+            Boolean prev = prevMapped.get(col.name());
+            if (prev != null) {
+                return new Column(col.name(), col.type(), col.originalTypes(), prev);
+            }
+            return new Column(col.name(), col.type(), col.originalTypes(), false);
+        }).toList();
+    }
+
+    private static List<Column> handleRenameIndexMapped(List<Column> newSchema, Map<String, Boolean> prevMapped, String commandString) {
+        Map<String, Boolean> mapped = new HashMap<>(prevMapped);
+        String body = commandString.replaceFirst("(?i)^\\s*\\|\\s*rename\\s+", "");
+        for (String pair : body.split(",")) {
+            Matcher m = RENAME_PAIR_PATTERN.matcher(pair);
+            if (m.matches()) {
+                String oldName = unquote(m.group(1).trim());
+                String newName = unquote(m.group(2).trim());
+                boolean wasMapped = mapped.getOrDefault(oldName, false);
+                mapped.remove(oldName);
+                mapped.put(newName, wasMapped);
+            }
+        }
+        return newSchema.stream().map(col -> {
+            Boolean isMapped = mapped.get(col.name());
+            return new Column(col.name(), col.type(), col.originalTypes(), isMapped != null && isMapped);
+        }).toList();
+    }
+
+    /**
+     * Checks if the error is a full-text function/operator rejecting a field that is not from an index mapping.
+     * Uses the {@link Column#indexMapped()} flag from the current schema when available; falls back to
+     * command-history heuristics otherwise.
+     */
+    static boolean isFieldFullTextError(
+        String errorMessage,
+        String query,
+        List<CommandGenerator.CommandDescription> previousCommands,
+        List<Column> currentSchema
+    ) {
+        Matcher m = NOT_A_FIELD_FROM_INDEX_PATTERN.matcher(errorMessage);
+        if (m.matches() == false) {
+            return false;
+        }
+        String fieldName = unquote(m.group(1));
+
+        if (currentSchema != null && currentSchema.isEmpty() == false) {
+            for (Column col : currentSchema) {
+                if (col.name().equals(fieldName)) {
+                    return col.indexMapped() == false;
+                }
+            }
+            // Field not found in schema — likely a pipeline artifact; allow the error
+            return true;
+        }
+        return false;
+    }
+
+    private static final Pattern FULL_TEXT_AFTER_SAMPLE_PATTERN = Pattern.compile(
+        ".*\\[(KQL|QSTR)] function cannot be used after SAMPLE.*",
+        Pattern.DOTALL
+    );
+
+    private static final Pattern FULL_TEXT_AFTER_WHERE_PATTERN = Pattern.compile(
+        ".*(?:(?:\\[(?:KQL|QSTR|MATCH|MatchPhrase)] function)|(?:\\[:\\] operator)) cannot be used after \\(?(?i:WHERE).*",
+        Pattern.DOTALL
+    );
+
+    /**
+     * See https://github.com/elastic/elasticsearch/issues/142705
+     * See https://github.com/elastic/elasticsearch/issues/142710
+     */
+    static boolean isFullTextAfterWhereBugs(String errorMessage) {
+        return FULL_TEXT_AFTER_WHERE_PATTERN.matcher(errorMessage).matches();
+    }
+
+    private static final Pattern MATCH_LENIENT_FALSE_PATTERN = Pattern.compile(
+        "(?i)\\bmatch\\s*\\([^)]*\\{[^}]*[\"']lenient[\"']\\s*:\\s*false[^}]*}[^)]*\\)"
+    );
+    private static final Pattern QSTR_LENIENT_FALSE_PATTERN = Pattern.compile(
+        "(?i)\\bqstr\\s*\\([^)]*\\{[^}]*[\"']lenient[\"']\\s*:\\s*false[^}]*}[^)]*\\)"
+    );
+
+    /**
+     * Work around a query-building failure in full-text functions when options include {@code {"lenient": false}}.
+     */
+    static boolean isLenientFalseFailedToCreateFullTextQueryError(String errorMessage, String query) {
+        if (errorMessage.contains("failed to create query: For input string") == false) {
+            return false;
+        }
+        return MATCH_LENIENT_FALSE_PATTERN.matcher(query).find() || QSTR_LENIENT_FALSE_PATTERN.matcher(query).find();
+    }
+
+    private static final Pattern TS_OUTPUT_CHANGED_PATTERN = Pattern.compile(
+        ".*Output has changed from \\[.*\\] to \\[.*\\].*",
+        Pattern.DOTALL
+    );
+
+    // https://github.com/elastic/elasticsearch/issues/134794
+    static boolean isTsOutputChangedError(String errorMessage, String query) {
+        if (errorMessage == null || query == null) {
+            return false;
+        }
+        if (TS_OUTPUT_CHANGED_PATTERN.matcher(errorMessage).matches() == false) {
+            return false;
+        }
+        String trimmed = query.trim().toUpperCase(Locale.ROOT);
+        return trimmed.startsWith("TS ");
     }
 
     @Override
     @SuppressWarnings("unchecked")
     public QueryExecuted execute(String query, int depth) {
+        QueryExecuted result;
         try {
             Map<String, Object> json = RestEsqlTestCase.runEsql(
                 new RestEsqlTestCase.RequestObjectBuilder().query(query).build(),
@@ -231,14 +778,20 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
             );
             List<Column> outputSchema = outputSchema(json);
             List<List<Object>> values = (List<List<Object>>) json.get("values");
-            return new QueryExecuted(query, depth, outputSchema, values, null);
+            result = new QueryExecuted(query, depth, outputSchema, values, null);
         } catch (Exception e) {
-            return new QueryExecuted(query, depth, null, null, e);
+            result = new QueryExecuted(query, depth, null, null, e);
         } catch (AssertionError ae) {
             // this is for ensureNoWarnings()
-            return new QueryExecuted(query, depth, null, null, new RuntimeException(ae.getMessage()));
+            result = new QueryExecuted(query, depth, null, null, new RuntimeException(ae.getMessage()));
         }
-
+        // Strip the artificial query approximation columns that are added after query execution and trail all
+        // other columns. These columns confuse follow-up command generation (that try to reference them) and
+        // result validation (that expect columns added after them).
+        if (result.query() != null && FromGenerator.hasApproximationSettings(result.query())) {
+            result = stripApproximationColumns(result);
+        }
+        return result;
     }
 
     @SuppressWarnings("unchecked")
@@ -247,9 +800,7 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
         if (cols == null) {
             return null;
         }
-        return cols.stream()
-            .map(x -> new Column((String) x.get(COLUMN_NAME), (String) x.get(COLUMN_TYPE), originalTypes(x)))
-            .collect(Collectors.toList());
+        return cols.stream().map(x -> new Column((String) x.get(COLUMN_NAME), (String) x.get(COLUMN_TYPE), originalTypes(x))).toList();
     }
 
     @SuppressWarnings("unchecked")
@@ -262,8 +813,8 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
     }
 
     private List<String> availableIndices() throws IOException {
-        return availableDatasetsForEs(true, supportsSourceFieldMapping(), false, requiresTimeSeries()).stream()
-            .filter(x -> x.requiresInferenceEndpoint() == false)
+        return availableDatasetsForEs(true, supportsSourceFieldMapping(), false, requiresTimeSeries(), cap -> false).stream()
+            .filter(x -> x.inferenceEndpoints().isEmpty())
             .map(x -> x.indexName())
             .toList();
     }
@@ -285,7 +836,7 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
         return result;
     }
 
-    List<CsvTestsDataLoader.EnrichConfig> availableEnrichPolicies() {
-        return ENRICH_POLICIES;
+    private interface AllowedFailureRule {
+        boolean matches(FailureContext ctx);
     }
 }
